Refactor metadata to be treated as instance data